--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 certifi==2021.10.8
 charset-normalizer==2.0.9
 Django==4.0.5
+django-crispy-forms==1.14.0
 django-phonenumber-field==6.3.0
 faunadb==4.2.0
 future==0.18.2
